# project_1

./: .gitignore  README.md  pyproject.toml  pytest.ini  test_api.http
hotel_service/: settings.py  urls.py
reservation_service/: models.py  serializers.py  urls.py  views.py
reservation_service/migrations/: 0001_initial.py  0002_roomreservation_date_end_roomreservation_date_start_and_more.py  0003_hotelroom_description.py
reservation_service/tests/: fixture.py  test_hotel.py
